# loom

./: Dockerfile  README.md
.github/workflows/: build-image.yml  build.yml  generate-map.yml
scripts/: loom-entrypoint  loom-map
tests/: create_dup_route_gtfs.py  create_tiny_gtfs.py  run_e2e.sh  test_gtfs_transform.py  test_wrapper.py
wrapper/: pyproject.toml
wrapper/loom_map/: __init__.py  cli.py  config.py  gtfs.py  gtfs_transform.py  pipeline.py
